--- a/index.html
+++ b/index.html
@@ -233,10 +233,10 @@
                 <p class="text-lg text-gray-300 mt-4 max-w-2xl mx-auto">สนใจนวัตกรรมของเรา หรือต้องการข้อมูลเพิ่มเติม? ติดต่อเราได้เลย</p>
                 <div class="mt-8 bg-white text-panus-blue p-8 rounded-lg shadow-lg inline-block">
                     <p class="font-bold">บริษัท พนัส แอสเซมบลีย์ จำกัด</p>
-                    <p>888 หมู่ 1 ถนนบางนา-ตราด กม. 26.5</p>
-                    <p>ตำบลบางบ่อ อำเภอบางบ่อ จังหวัดสมุทรปราการ 10560</p>
-                    <p class="mt-4"><strong>โทรศัพท์:</strong> +66 2 316 9965</p>
-                    <p><strong>อีเมล:</strong> contact@panus.co.th</p>
+                    <p>27/1 หมู่3</p>
+                    <p>ตำบลกุฎโง้ง อำเภอพนัสนิคม ชลบุรี 20140</p>
+                    <p class="mt-4"><strong>โทรศัพท์:</strong> +66 38 462 102</p>
+                    <p><strong>อีเมล:</strong> wimol@panus.co.th</p>
                     <a href="http://www.panus.co.th" target="_blank" class="inline-block mt-4 bg-panus-gold text-panus-blue font-bold py-2 px-6 rounded-lg hover:bg-opacity-90 transition duration-300">
                         เยี่ยมชมเว็บไซต์
                     </a>
