update contact info

--- a/index.html
+++ b/index.html
@@ -236,9 +236,9 @@
                 <p class="text-lg text-gray-300 mt-4 max-w-2xl mx-auto" data-lang="contactSubtitle">สนใจนวัตกรรมของเรา หรือต้องการข้อมูลเพิ่มเติม? ติดต่อเราได้เลย</p>
                 <div class="mt-8 bg-white text-panus-blue p-8 rounded-lg shadow-lg inline-block">
                     <p class="font-bold" data-lang="companyName">บริษัท พนัส แอสเซมบลีย์ จำกัด</p>
-                    <p data-lang="companyAddress1">888 หมู่ 1 ถนนบางนา-ตราด กม. 26.5</p>
-                    <p data-lang="companyAddress2">ตำบลบางบ่อ อำเภอบางบ่อ จังหวัดสมุทรปราการ 10560</p>
-                    <p class="mt-4" data-lang="companyPhone"><strong>โทรศัพท์:</strong> +66 2 316 9965</p>
+                    <p data-lang="companyAddress1">27/1 หมู่3</p>
+                    <p data-lang="companyAddress2">ตำบลกุฎโง้ง อำเภอพนัสนิคม ชลบุรี 20140</p>
+                    <p class="mt-4" data-lang="companyPhone"><strong>โทรศัพท์:</strong> +66 38 462 102</p>
                     <p data-lang="companyEmail"><strong>อีเมล:</strong> contact@panus.co.th</p>
                     <a href="http://www.panus.co.th" target="_blank" class="inline-block mt-4 bg-panus-gold text-panus-blue font-bold py-2 px-6 rounded-lg hover:bg-opacity-90 transition duration-300" data-lang="websiteButton">
                         เยี่ยมชมเว็บไซต์
@@ -318,10 +318,10 @@
                     contactTitle: 'ติดต่อเรา',
                     contactSubtitle: 'สนใจนวัตกรรมของเรา หรือต้องการข้อมูลเพิ่มเติม? ติดต่อเราได้เลย',
                     companyName: 'บริษัท พนัส แอสเซมบลีย์ จำกัด',
-                    companyAddress1: '888 หมู่ 1 ถนนบางนา-ตราด กม. 26.5',
-                    companyAddress2: 'ตำบลบางบ่อ อำเภอบางบ่อ จังหวัดสมุทรปราการ 10560',
-                    companyPhone: '<strong>โทรศัพท์:</strong> +66 2 316 9965',
-                    companyEmail: '<strong>อีเมล:</strong> contact@panus.co.th',
+                    companyAddress1: '27/1 หมู่3',
+                    companyAddress2: 'ตำบลกุฎโง้ง อำเภอพนัสนิคม ชลบุรี 20140',
+                    companyPhone: '<strong>โทรศัพท์:</strong> +66 38 462 102',
+                    companyEmail: '<strong>อีเมล:</strong> wimol@panus.co.th',
                     websiteButton: 'เยี่ยมชมเว็บไซต์',
                     footerText: '&copy; 2025 PANUS Assembly Co., Ltd. All Rights Reserved.'
                 },
@@ -381,10 +381,10 @@
                     contactTitle: 'Contact Us',
                     contactSubtitle: 'Interested in our innovations or need more information? Contact us now.',
                     companyName: 'PANUS Assembly Co., Ltd.',
-                    companyAddress1: '888 Moo 1, Bangna-Trad Road Km. 26.5',
-                    companyAddress2: 'Bang Bo Sub-district, Bang Bo District, Samut Prakan 10560',
-                    companyPhone: '<strong>Phone:</strong> +66 2 316 9965',
-                    companyEmail: '<strong>Email:</strong> contact@panus.co.th',
+                    companyAddress1: '27/1 Moo 3',
+                    companyAddress2: 'Kood-ngong Sub-district, Phanat Nikhom District, Chon Buri 20140',
+                    companyPhone: '<strong>Phone:</strong> +66 38 462 102',
+                    companyEmail: '<strong>Email:</strong> wimol@panus.co.th',
                     websiteButton: 'Visit Website',
                     footerText: '&copy; 2025 PANUS Assembly Co., Ltd. All Rights Reserved.'
                 }
